Thu Jul 11 10:09:18 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* process.c (rb_daemon): daemon(3) is implemented with fork(2).
	  Therefore it needs rb_thread_atfork(). (and revert r41903)

Thu Jul 11 03:22:10 2013  Aaron Patterson <aaron@tenderlovemaking.com>

	* tool/probes_to_wiki.rb: adding a script to convert probes.d to wiki
	  format for easy wiki updates.

Thu Jul 11 00:54:07 2013  Zachary Scott  <zachary@zacharyscott.net>

	* man/ri.1: Incorrect use of .Dd macro [Bug #8620] by Tristan Hill

Thu Jul 11 00:48:29 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/delegate.rb: Add example for __setobj__ and __getobj__
	  [Bug #8615] Patch by Caleb Thompson

Wed Jul 10 23:29:22 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/logger.rb: Use :call-seq: for method signature rdoc

Wed Jul 10 23:23:18 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/logger.rb (#add): Remove incorrect rdoc for return value
	  [Bug #8567] Reported by Tim Pease.

Wed Jul 10 23:12:00 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_subpos): make public function.

Wed Jul 10 22:44:19 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c: Add a static assertion for RBIGNUM_EMBED_LEN_MAX.

Wed Jul 10 22:31:25 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* string.c (rb_str_index): cache single byte flag and some
	  cosmetic changes.

Wed Jul 10 22:03:27 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_2comp): Don't use bary_plus_one.
	  (bary_add_one): Replaced by the implementation of bary_plus_one.

Wed Jul 10 20:48:22 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (sizeof_bdigit_dbl): check sizeof(BDIGIT_DBL).

	* internal.h (STATIC_ASSERT): move from enum.c.

Wed Jul 10 20:08:21 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (SIZEOF_BDIGIT_DBL): Add a ifdef guard for test.

Wed Jul 10 14:18:59 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (fork_daemon): kill the other threads all and abandon the
	  kept mutexes.
