@@ -1,12 +1,12 @@
 ###
 # Converts the probes.d file to redmine wiki format. Usage:
 #
-#   ruby probes.d
+#   ruby tool/probes_to_wiki.rb probes.d
 
-File.read(ARGV[0]).scan(/\/\*.*?\*\//m).grep(/ruby/).each do |comment|
+File.read(ARGV[0]).scan(/\/\*.*?\*\//m).grep(/ruby/) do |comment|
   comment.gsub!(/^(\/\*|[ ]*)|\*\/$/, '').strip!
   puts
-  comment.each_line.each_with_index do |line, i|
+  comment.each_line.with_index do |line, i|
     if i == 0
       puts "=== #{line.chomp}"
     else
