@@ -1,3 +1,8 @@
+Thu Jul 11 10:46:38 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* tool/probes_to_wiki.rb: fix usage comment.  use Enumerable#grep
+	  which yields each elements to reduce unnecessary array.
+
 Thu Jul 11 10:09:18 2013  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* process.c (rb_daemon): daemon(3) is implemented with fork(2).
